--- a/DatingApp-SPA/angular.json
+++ b/DatingApp-SPA/angular.json
@@ -86,7 +86,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+            ]
           }
         },
         "lint": {
