End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+   "CloudName":"dow6ro5eu",
+   "ApiKey":"571796749764187",
+   "ApiSecret":"dOQZRQuU9D7zhBdapfJadir8wK4"
+  }
 }
